public/stylesheets/style.css
body {
  padding: 50px;
  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
  background-color: #efefef
}

a {
  color: #00B7FF;
}

#mainLogo {
    max-height: 100px;
    display: block;
    margin-right: auto;
    margin-left: auto;
}

#courseTableDiv {
    margin: 20px;
    margin-right: auto;
    margin-left: auto;
    width: 70%;
}

.courseRow {
    background-color: white;
}

.panelHeading {
    text-align: center; 
    position: relative;
    padding-top: 15px;
    padding-bottom: 15px;
}

.coursesTableHead {
    font-weight: bold;
}

#courseViewPanel {
    margin: 0;
}

#addCourseButton {
    position: absolute;
    left: 1%;
    top: 12%;
}

input[type="text"] {
  border: none;
  border-bottom: solid 2px #c9c9c9;
  -webkit-transition: border 0.3s;
  -moz-transition: border 0.3s;
  -o-transition: border 0.3s;
  transition: border 0.3s;
}

input[type="text"]:focus,
input[type="text"].focus {
  outline: none;
  border: none;
  border-bottom: solid 2px #969696;
}

#addButton {
    display: block;
    margin-top: 2%;
    margin-bottom: 2%;
    margin-right: auto;
    margin-left: auto;
}

.crs-interaction {
    padding-top: 5px;
    padding-bottom: 2px;
    padding-right: 5px;
    padding-left: 4px;
    font-size: medium;
}

.borderless td, .borderless th {
    border: none !important;
}

.modalTable {
    margin-top: 1%;
}

.centerAligned {
    vertical-align: middle !important;
    text-align: center;
}

.field {
    padding: 1.5%;
}

